dark mode fixes

--- a/src/Pages/PasswordGenerator/PasswordGenerator.module.scss
+++ b/src/Pages/PasswordGenerator/PasswordGenerator.module.scss
@@ -51,3 +51,7 @@
 .generateButton {
    @include gradientButton(100%, 45px, 8px);
 }
+
+.generateButtonDM {
+   @include gradientButtonDarkMode(100%, 45px, 8px);
+}
