--- a/src/StylesTemplate/Global.scss
+++ b/src/StylesTemplate/Global.scss
@@ -204,3 +204,8 @@ input[type="number"]::-webkit-inner-spin-button,
    @include gradientButton(100px, 40px, 48px);
    margin-right: 1rem;
 }
+
+.confirmModalButtonDM {
+   @include gradientButtonDarkMode(100px, 40px, 48px);
+   margin-right: 1rem;
+}
